--- a/contents.tex
+++ b/contents.tex
@@ -110,6 +110,7 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
   EU
   ACCELERATE
   MOSFETs
+  XXR - latex table definition
 \end{comment}
 
 \chapter*{Symbolverzeichnis}
