--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -66,11 +66,9 @@ Da diese drei Parametersätze, welche von der Arbeitsgruppe um \textsc{S.~M.~Foi
 \subsection{Thermodynamische Eigenschaften}
 
 Eine Untersuchung der thermodynamischen Eigenschaften der Parametersätze, wie sie auch für die Gold-Parametrisierung durchgeführt wurde (Abschnitt~\ref{goldthermo}), zeigt eine Überschätzung der Schmelztemperatur um ca. \SI{200}{\kelvin}, mit Ausnahme von \pot{cu\_ag\_ymwu.eam.alloy}.
-Somit zeigt sich\todo{Satz nochmal lesen}, dass Parametrisierungen für die Beschreibung struktureller Eigenschaften in der Regel keine thermodynamischen Eigenschaften darstellen, oder nur für eine Auswahl von Systemen angepasst wurden.
+Somit zeigt sich, dass Parametrisierungen für die Beschreibung struktureller Eigenschaften in der Regel keine thermodynamischen Eigenschaften darstellen, oder nur für eine Auswahl von Systemen angepasst wurden.
 Unterhalb von \SI{1000}{\kelvin} stimmen die meisten Dichten mit Referenzwerten überein, die über den linearen Ausdehnungskoeffizienten von $\alpha = \SI{16.5e-6}{\per\kelvin}$\cite{haynes_crc_2011} berechnet wurden.
 Die Referenzwerte stammen aus den Referenzen~\cite{haynes_crc_2011,brillo_density_2006} (Siehe Anhang~\ref{appendix_constants}).
-
-\todo{Legenden (Parametersätze und Temperatur) + linke Grafik neu (Legende überlagert sich). Die Grafiken sind klein.}
 
 \begin{figure}[H]
   \centering
