--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -30,23 +30,23 @@
 
 \begin{document}
 
-%% \include{titel}
-%% \pagenumbering{roman}
-%% \include{abstract}
-%% \include{contents}
+\include{titel}
+\pagenumbering{roman}
+\include{abstract}
+\include{contents}
 
 \pagenumbering{arabic}
 
-%% \cleardoublepage
-%% \include{intro}
-%% \cleardoublepage
-%% \include{theory}
-%% \cleardoublepage
-%% \include{models}
+\cleardoublepage
+\include{intro}
+\cleardoublepage
+\include{theory}
+\cleardoublepage
+\include{models}
 \cleardoublepage
 \include{results}
-%% \cleardoublepage
-%% \include{summary}
+\cleardoublepage
+\include{summary}
 
 \cleardoublepage
 \include{appendix}
@@ -54,7 +54,7 @@
 \cleardoublepage
 \include{bibliography}
 
-%% \include{unischeiss}
+\include{unischeiss}
 
 \include{test}
 
