--- a/present.tex
+++ b/present.tex
@@ -80,7 +80,7 @@ Kupfer-Nickel-Multilagensysteme wurden unter anderem von \textsc{Foiles et al.}\
 Der durch unterschiedliche Bindungslängen entstehende Versatz zwischen den Kupfer- und Nickel-Kristallen wurde von \textsc{Rao et al.}\cite{rao_atomistic_2000} simuliert.
 
 \subsubsection{Silizium}
-Für Silizium finden sich thermodynamische Expansions-Simulationen von \textsc{Buda et al.}\cite{buda_thermal_1990} sowie Untersuchungen von \textsc{Insepov et al.}\cite{insepov_molecular_1995} zur Auswirkung von gerichteten Cluster-Einschlägen in Abhängigkeit der Einschlagsenergie.
+Für Silizium finden sich thermodynamische Expansions-Simulationen von \textsc{Buda et al.}\cite{buda_thermal_1990} sowie Untersuchungen von \textsc{Insepov et al.}\cite{insepov_molecular_1995} zur Auswirkung von gerichteten Cluster-Ein/-schlägen in Abhängigkeit der Einschlagsenergie.
 \textsc{Torre et al.}\cite{torre_study_2002} haben außerdem die Oxidierung von Silizium-Nanopartikeln mit Drei-Teilchen-Potentialen simuliert.
 %% {mehr! PVD und Oxidation / Hydroxylierung von Oberflächen} - Gibt's nicht
 
