--- a/settings.tex
+++ b/settings.tex
@@ -46,6 +46,7 @@
 \definecolor{lightgray}{gray}{0.9}
 
 \newcolumntype{C}{>{\centering\arraybackslash}X}
+\newcolumntype{R}{>{\hsize=0.15\textwidth}X}
 
 \newcommand{\cG}[1]{\cellcolor{Green}#1}
 \newcommand{\cY}[1]{\cellcolor{Yellow}#1}
@@ -60,6 +61,7 @@
 
 \DeclareSIUnit\gpcc{\gram\per\cubic\centi\meter}
 \def\oddrowcolors{\rowcolors{0}{white}{lightgray}}
+\def\evenrowcolors{\rowcolors{0}{lightgray}{white}}
 
 %threeparttable textwidth
 \renewcommand{\TPTminimum}{\textwidth}
